src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A33.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram C4A33 {
  interface A1;
  interface B1;
  association A1 -> (foo) B1 [1];

  class A2 implements A1;
  association / A2 -> (foo) B1 [1]; // ok, b/c the association is derived (actually inherited) and
                                    // A2::getFoo() is inherited from A1::getFoo() and both return B1
                                    // A2::setFoo(B1 b1) is inherited from A1::setFoo(B1 b1)
}
