src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A26_2.cd
/* (c) https://github.com/MontiCore/monticore */

package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A26_2 {

    class A;
    class B;
    class C;

 //   association foo A -> B [1];
    association foo1 B -> C [1];
    association foo1 B -> A [1]; // error namespace B::foo1 is already used by other association

}
